--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        orgdpl-vanadiumoxide
+    </title>
+</head>
+<body>
+    <h1>
+        Orgdpl-vanadiumoxide
+    </h1>
+    <div>Página web en la organización</div>
+</body>
+</html>
 
